--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "jose": "^6.1.0",
     "next": "15.5.6"
   },
   "devDependencies": {
